refactor: 커서 생성 로직 수정